--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <name>kafka-connect-github-source</name>
 
     <properties>
-        <kafka.version>0.10.2.0-cp1</kafka.version>
+        <kafka.version>2.7.0</kafka.version>
         <junit.version>4.12</junit.version>
     </properties>
 
@@ -62,8 +62,8 @@
                 <version>2.5.1</version>
                 <inherited>true</inherited>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>1.15</source>
+                    <target>1.15</target>
                 </configuration>
             </plugin>
             <plugin>
